--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-form-stepper": "^2.0.3",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "recharts": "^2.12.0",
