--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-time-picker": "^6.6.0",
     "recharts": "^2.12.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6",
