--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recharts": "^2.12.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
